--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "curso-angular-portfolio": {
+    "portfolio-victor": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/curso-angular-portfolio",
+            "outputPath": "dist/portfolio-victor",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -58,10 +58,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "curso-angular-portfolio:build:production"
+              "buildTarget": "portfolio-victor:build:production"
             },
             "development": {
-              "buildTarget": "curso-angular-portfolio:build:development"
+              "buildTarget": "portfolio-victor:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -69,7 +69,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "curso-angular-portfolio:build"
+            "buildTarget": "portfolio-victor:build"
           }
         },
         "test": {
